<resources>
    <string name="app_name">HACKFIT2021</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_diary">Diary</string>
    <string name="bottom_nav_music">Music</string>
    <string name="bottom_nav_blogs">Blogs</string>
    <string name="journal_title">Title</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="great_text">Great!</string>
    <string name="how_feel">How do you feel today?</string>
    <string name="good_text">Good</string>
    <string name="ok_text">Ok</string>
    <string name="bad_text">Bad</string>
    <string name="terrible_text">Terrible</string>
    <string name="activities_text">Activities</string>
    <string name="breathing_description">Description for breathing - something huge</string>
    <string name="settings">settings</string>
    <string name="blog_1">Anxiety and depression are two of the most common mental health conditions we see. And though they’re frequently confused, they’re actually different classes of disorders. Some of the confusion stems from an overlap in symptoms and in the fact that they often co-occur. But despite sharing some symptoms, there is a significant difference between anxiety and depression in the actual definition of each condition.

On a high level, anxiety involves excessive worrying or stress about the outcome of a situation. Depression, on the other hand, is a mood disorder that causes overwhelming feelings of sadness or apathy.

We’ll dive into the key differences below and review each mental health condition in more detail.

What Is the Difference Between Anxiety and Depression?
Part of the reason why anxiety vs depression can be difficult for many people to identify is that there are overlapping symptoms in the two conditions. Also, keep in mind that many people diagnosed with major depressive disorder may also have an anxiety disorder. In fact, nearly half of all people diagnosed with depression are also diagnosed with an anxiety disorder.

So, what is the difference between anxiety and depression?

While there are many common symptoms between anxiety and depression — such as fatigue, changes in appetite, and difficulty concentrating — there are also some blatant differences. For example, excessive worry is more common with anxiety, whereas thoughts of suicide are more prevalent with depression.

Anxiety and depression also fall into different classifications of disorders. Anxiety is its own class, and depression is a separate mood disorder. Finally, another difference between the two conditions is that they’re sometimes treated with different medications.

To best understand the differences listed above, it’s important to review these disorders in-depth.</string>
    <string name="blog_2">
        For some people, an ideal therapy experience doesn’t necessarily mean consulting a professional, answering questions that’ll help them determine what’s wrong, and listening to another person advise  them on how to work through their struggles. Therapy can also involve a more humanistic approach, where your therapist merely guides your journey of self-discovery and supports you in finding the answers you’ve been seeking. After all, you’re the expert on your own life.

This type of psychotherapy is known as client centered therapy, and it focuses on maximizing your ability to find your own solutions with the right amount of support. If you are looking for an effective humanistic therapy method to help support your mental health, this type of counseling is an excellent place to start.

What Is Client Centered Therapy?
Client centered therapy, or person centered therapy, is a non-directive approach to talk therapy. It requires the client to actively take the reins during each therapy session, while the therapist acts mainly as a guide or a source of support for the client. “Person centered therapy allows the client to steer the ship.  There’s no agenda, no rush,” says Talkspace therapist Catherine Richardson, MA, LPC, EMDR. This person centered approach supports mental health by coming from a place of empathy during each counselling session.

The concept of client centered therapy might seem like a stretch — after all, most kinds of humanistic therapy essentially focus on the client. What sets this type of therapy apart, however,  is that it centers the client in a more positive and inclusive manner, providing deeper insight into the difficult situation they’re facing while also maximizing their ability to resolve it on their own. This type of talk therapy supports a therapeutic process that encourages positive change within the client.
    </string>
    <string name="blog_3">
        Relationships can be wonderful. They can be fulfilling, joyful, and…yes, stressful. In fact, few things in life can cause us the type of anxiety a romantic relationship can. While some stress is normal in life, acknowledging when things get hard and learning how to deal with relationship anxiety can help you establish healthy, functioning, rewarding relationships for years to come. Thankfully, relationship counseling online is easily accessible if you’re ready to start managing it.

Read on to learn more about the causes of romantic relationship anxiety, what some of the signs and effects can be, and most importantly, what to do if you’re feeling anxious in a relationship.

What is Relationship Anxiety?
Relationship anxiety can come from difficulties you’re having in your relationship: You may be concerned about whether or not your relationship will last. You might be unsure if you can trust your romantic partner. You may even be struggling with commitment issues. The list goes on. All of these worries can contribute to relationship anxiety.
        When left untreated or unacknowledged, relationship anxiety can sometimes result in:

A lack of motivation, both personally and professionally
Emotional distress for one or both partners
Emotional exhaustion
Extreme fatigue
Physical concerns like an upset stomach, headaches, neck and muscle tension
    </string>
    <string name="blog_4">
       The coronavirus pandemic continues to upend nearly every aspect of our lives. For parents, this includes once reliable school schedules and calendars. As districts consider a potential return to a traditional school environment this fall, continued distance learning, or a hybrid of the two, parents have lots to consider amid this uncertain situation.

What’s safest for my child and the rest of my family? Should we consider homeschooling? How will his or her learning be impacted? How will we cope with what’s decided?

Protecting your mental health as a parent is critical to feeling your best and gracefully guiding your family through what looks to be another unprecedented school year. Here’s how to cope with this dynamic and potentially dangerous situation.
        1. Be Open to Change
If the evolving world-health situation has taught us anything, it’s that change is inevitable. New research findings, shelter-in-place orders, and face mask mandates have the potential to upend any education plans made for the upcoming school year. Prepare yourself now for this possibility by thinking through contingency plans
        2. Set Boundaries
Quarantine restrictions have clearly impacted spousal and family relationships. More time together, with fewer options for healthy outlets like heading to the gym or catching up with a friend over coffee, can mean more opportunities for conflict. One survey found that only 18% of couples were satisfied with the communication in the marriage, even as they were spending additional time together.
        3. Invest in Self-Care
Taking care of yourself physically, emotionally, and mentally will help you journey through the uncertainty of this school year. Commit to regular self-care, and don’t let other priorities compete with this valuable time.
        4. Show Empathy
During these polarizing times, every decision seems to cause a further divide among parents, educators, politicians, family members, and neighbors. Chances are, whatever decision your district makes about learning methods for this school year, there’s going to be an unhappy group of people who disagree with the approach. That might include you!
    </string>
    <string name="blog_5">
       No matter how eager you are to change your ways, there will come a point in therapy when you think, “This sucks. Dante forgot to include ‘Therapy’ as the tenth layer of hell.”

It’s hard work. Maybe you had a panic attack during a session, or realized some difficult truths about your personality. Sometimes therapy is boring, or you’re convinced your poor therapist is bored. You talk about the same things week after week, over and over again, and nothing in you is changing.

Don’t quit.

Yes, it’s tempting. If you quit, you don’t have to spend another second thinking about your relationship with your mother! You’re forgiven for thinking that sounds glorious — but it’s not. There’s rhyme and reason to therapy: helping you understand yourself, and finding ways to cope (or even overcome!) your anxiety, or anger, depression, other mental health issues, or just keeping you on track with your goals.

Unfortunately, the path isn’t always easy. But keep walking toward your goal, even when therapy is tough. Here’s why.

When Therapy Is Tough, It’s Real
If therapy was fun, everyone would get therapized! Unfortunately, good therapy sometimes requires digging deep into your subconscious and psyche — and revealing what may be some painful memories and feelings stored there.

Does your stomach turn and your hands go clammy when you think about your therapist’s office? That’s a good sign (assuming you have a good therapist — here’s how to check). Don’t feel guilty if you’re anxious about diving into your most tender emotion to cause a further divide among parents, educators, politicians, family members, and neighbors. Chances are, whatever decision your district makes about learning methods for this school year, there’s going to be an unhappy group of people who disagree with the approach. That might include you!
    </string>
</resources>