<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RatingsFragment"
    android:gravity="center_horizontal">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_feel"
        android:textSize="35sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"/>

    <TextView
        android:id="@+id/date_rating"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_rating"
        android:text=""
        android:textAlignment="center" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/great_card_rating"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_below="@+id/date_rating"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/ColorGray"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/great_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/great_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="83dp"
            android:text="@string/great_text"
            android:textSize="20sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/good_card_rating"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/ColorGray"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@+id/great_card_rating"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/good_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/smile"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/good_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_text"
            android:layout_marginStart="87dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ok_card_rating"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/ColorGray"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@+id/good_card_rating"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/ok_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/confused"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/ok_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_text"
            android:layout_marginStart="97dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bad_card_rating"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/ColorGray"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@+id/ok_card_rating"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/bad_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/sad"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/bad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_text"
            android:layout_marginStart="90dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/terrible_card_rating"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/ColorGray"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@+id/bad_card_rating"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/terrible_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/crying"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/terrible_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terrible_text"
            android:layout_marginStart="80dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
</ScrollView>